--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://th.bing.com/th/id/OIP.slGk2yR4VAVJ_npH4-kkrgHaFj?rs=1&pid=ImgDetMain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Weather</title>
   </head>
   <body>
     <div id="root"></div>
